[package]
name = "fbw_map_parser"
version = "1.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/KnedlikMCPE/fbw_map_parser"
license = "MIT"
description = "This library allows extracting height data at an arbitrary geographical coordinate from the dataset used by FlyByWire simulations for Microsoft Flight Simulator."

[dependencies]
zune-inflate = { version = "0.2", default-features = false, features = ["gzip"] }